# tdm-course-project

./: .gitignore  Cargo.toml  index.html  style.css
ratio-extension/: cargo.toml
ratio-extension/src/: lib.rs  ratio_ext.rs
src/: app.rs  helpers.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/proptest-regressions/simplex/: big_number.txt
src-tauri/src/: helpers.rs  lib.rs  main.rs
src-tauri/src/command/: compute.rs  mod.rs
src-tauri/src/helpers/: mod.rs  ratio_ext.rs
src-tauri/src/simplex/: big_number.rs  mod.rs  problem.rs  solution.rs  table.rs
src-tauri/src/simplex/problem/: tests.rs
src/command/: compute.rs  mod.rs
src/component/: math.rs  mod.rs  rational.rs  solution.rs  table.rs
