[package]
name = "course-project-ui"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = { version="0.20", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }
ndarray = "0.15"
nalgebra = { version = "0.31", features = ["serde-serialize", "rand"] }
num-traits = "0.2"
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde", "num-bigint"] }
num-integer = "0.1"
lazy_static = "1.4"

[dependencies.material-yew]
version = "0.2"
features = ["button"]

[workspace]
members = ["src-tauri"]
