[package]
name = "course-project"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
ndarray = "0.15"
nalgebra = { version = "0.31", features = ["serde-serialize", "rand"] }
num-traits = "0.2"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-rational = { version = "0.4", features = ["serde", "num-bigint"] }
rand = { version = "0.8.5", features = ["serde"] }
num-integer = "0.1"
derive-new = "0.5"
lazy_static = "1.4"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
branch = "dev"

[dependencies.derive_more]
version = "0.99"
features = ["is_variant", "display", "add"]

[dev-dependencies]
pretty_assertions = "1.3"
proptest = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
